# voight-kampff

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  ROADMAP.md  book.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_recommender.py
.github/workflows/: ci.yml  ethicalcheck.yml
docs/: SUMMARY.md  architecture.md  data_pipeline.py  introduction.md
src/api/: server.py
src/data/: __init__.py  loader.py
src/models/: collaborative_filtering.py
src/utils/: __init__.py
src/voight_kampff/: service.py
src/voight_kampff/api/: __init__.py  server.py
src/voight_kampff/cli/: __init__.py  config.py  interrogate.py  main.py  output.py  serve.py  train.py
src/voight_kampff/data/: loader.py
src/voight_kampff/models/: artifact.py
src/voight_kampff/utils/: version.py
tests/: __init__.py  conftest.py  test_api.py  test_artifact.py  test_cli.py  test_cli_config.py  test_collaborative_filter.py  test_loader.py  test_service.py
